--- a/problem_011.ipynb
+++ b/problem_011.ipynb
@@ -16,6 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Grids\n",
     "grid = [\n",
     "    [8 ,  2, 22, 97, 38, 15,  0, 40,  0, 75,  4,  5,  7, 78, 52, 12, 50, 77, 91,  8], \n",
     "    [49, 49, 99, 40, 17, 81, 18, 57, 60, 87, 17, 40, 98, 43, 69, 48,  4, 56, 62,  0], \n",
@@ -43,51 +44,112 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a7469d40",
+   "id": "5ac01d4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Maximum column and row length\n",
-    "max_col = len(grid[0])\n",
-    "max_row = len(grid)\n",
+    "# Grid lines\n",
+    "def grid_lines(grid):\n",
+    "    # grid size\n",
+    "    grid_length_horizontal = len(grid[0])\n",
+    "    grid_length_vertical = len(grid)\n",
     "\n",
-    "# Empty lists of lists for columns, rows, forward diagonals and backward diagonals\n",
-    "cols = [[] for _ in range(max_col)]\n",
-    "rows = [[] for _ in range(max_row)]\n",
-    "fdiag = [[] for _ in range(max_row + max_col - 1)]\n",
-    "bdiag = [[] for _ in range(max_row + max_col - 1)]\n",
+    "    # init grid lines\n",
+    "    grid_horizontals = [list() for _ in range(grid_length_horizontal)]\n",
+    "    grid_verticals = [list() for _ in range(grid_length_vertical)]\n",
+    "    grid_diagonals_foreward = [list() for _ in range(grid_length_horizontal + grid_length_vertical - 1)]\n",
+    "    grid_diagonals_backward = [list() for _ in range(grid_length_horizontal + grid_length_vertical - 1)]\n",
     "\n",
-    "# Fill lists of lists\n",
-    "for x in range(max_col):\n",
-    "    for y in range(max_row):\n",
-    "        cols[x].append(grid[y][x])\n",
-    "        rows[y].append(grid[y][x])\n",
-    "        fdiag[x+y].append(grid[y][x])\n",
-    "        bdiag[x-y-(-max_row+1)].append(grid[y][x])\n",
+    "    # fill grid lines\n",
+    "    for x in range(grid_length_horizontal):\n",
+    "        for y in range(grid_length_vertical):\n",
+    "            grid_horizontals[y].append(grid[y][x])\n",
+    "            grid_verticals[x].append(grid[y][x])\n",
+    "            grid_diagonals_foreward[x+y].append(grid[y][x])\n",
+    "            grid_diagonals_backward[x-y+grid_length_vertical-1].append(grid[y][x])\n",
+    "    \n",
+    "    # lines\n",
+    "    lines = {}\n",
+    "    lines['horizontals'] = grid_horizontals\n",
+    "    lines['verticals'] = grid_verticals\n",
+    "    lines['diagonals_forward'] = grid_diagonals_foreward\n",
+    "    lines['diagonals_backward'] = grid_diagonals_backward\n",
     "\n",
-    "# Series >= 4\n",
-    "series = [l for l in cols + rows + fdiag + bdiag if len(l) >= 4]\n",
-    "\n",
-    "# Series = 4\n",
-    "four = []\n",
-    "for s in series:\n",
-    "    l = len(s)\n",
-    "    n = l-4\n",
-    "    for i in range(n+1):\n",
-    "        four.append(s[i:i+4])\n",
-    "\n",
-    "# Product\n",
-    "product = []\n",
-    "for f in four:\n",
-    "    p = 1\n",
-    "    for i in f:\n",
-    "        p *= i\n",
-    "    product.append(p)"
+    "    # return\n",
+    "    return lines"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "9559ef6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Greatest product of n adjacent numbers\n",
+    "def greatest_adjacent_numbers(n, grid_lines):\n",
+    "    # Flatten list\n",
+    "    lines = [line for sub_list in [value for key, value in grid_lines.items()] for line in sub_list]\n",
+    "\n",
+    "    # Keep lines with minimum required length\n",
+    "    lines = [line for line in lines if len(line) >= n]\n",
+    "\n",
+    "    # Sections of length n from all lines\n",
+    "    sections = []\n",
+    "    for s in lines:\n",
+    "        l = len(s)\n",
+    "        x = l-n\n",
+    "        for i in range(x+1):\n",
+    "            sections.append(s[i:i+n])\n",
+    "    \n",
+    "    # Products\n",
+    "    products = []\n",
+    "    for s in sections:\n",
+    "        p = 1\n",
+    "        for i in s:\n",
+    "            p *= i\n",
+    "            products.append(p)\n",
+    "    \n",
+    "    # Return\n",
+    "    return max(products)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "66cafa2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "horizontals [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+      "verticals [[1, 4, 7], [2, 5, 8], [3, 6, 9]]\n",
+      "diagonals_forward [[1], [4, 2], [7, 5, 3], [8, 6], [9]]\n",
+      "diagonals_backward [[7], [4, 8], [1, 5, 9], [2, 6], [3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test run\n",
+    "\n",
+    "test_grid = [\n",
+    "    [ 1, 2, 3], \n",
+    "    [ 4, 5, 6], \n",
+    "    [ 7, 8, 9], \n",
+    "]\n",
+    "\n",
+    "for key, value in grid_lines(test_grid).items():\n",
+    "    print(key, value)\n",
+    "\n",
+    "assert greatest_adjacent_numbers(2, grid_lines(test_grid)) == 72 # 8 * 9\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "bb826667",
    "metadata": {},
    "outputs": [
@@ -97,14 +159,14 @@
        "70600674"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Answer\n",
-    "max(product)"
+    "greatest_adjacent_numbers(4, grid_lines(grid))"
    ]
   }
  ],
