--- a/python/problem_001.ipynb
+++ b/python/problem_001.ipynb
@@ -16,9 +16,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Init\n",
-    "n = 1000 # number\n",
-    "s = 0    # sum"
+    "# Setting\n",
+    "n = 1000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaa5f1a1",
+   "metadata": {},
+   "source": [
+    "#### Solution 1"
    ]
   },
   {
@@ -26,12 +33,24 @@
    "execution_count": 2,
    "id": "86eedacb-3def-49dd-8b09-07ad6f5af456",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "233168"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Logic\n",
+    "s = 0\n",
     "for i in range(1, n):\n",
     "    if (i%3 == 0) or (i%5 == 0):\n",
-    "        s += i"
+    "        s += i\n",
+    "s"
    ]
   },
   {
@@ -41,19 +60,116 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43.6 μs ± 234 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "s = 0\n",
+    "for i in range(1, n):\n",
+    "    if (i%3 == 0) or (i%5 == 0):\n",
+    "        s += i\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f79377c2",
+   "metadata": {},
+   "source": [
+    "#### Solution 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ea9a7c99",
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "233168"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
-    "s"
+    "sum([i for i in range(n) if (i%3 == 0) or (i%5 == 0)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "87b48ae7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43.1 μs ± 1.89 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "sum([i for i in range(n) if (i%3 == 0) or (i%5 == 0)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77db6c57",
+   "metadata": {},
+   "source": [
+    "#### Solution 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "47dceda5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "233168"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(set(range(0, n, 3)).union(set(range(0, n, 5))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6c4767ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.7 μs ± 56.4 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "sum(set(range(0, n, 3)).union(set(range(0, n, 5))))"
    ]
   }
  ],
