--- a/julia/problem_004.ipynb
+++ b/julia/problem_004.ipynb
@@ -12,6 +12,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "d4560f0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Packages\n",
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baf638d4",
+   "metadata": {},
+   "source": [
+    "#### Solution 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [
@@ -26,50 +45,35 @@
     }
    ],
    "source": [
-    "# Largest palindrome product\n",
-    "function largest_palindrome_product(digits)\n",
-    "    low = 10^(digits-1)\n",
-    "    high = (10^digits)-1\n",
-    "    r = low:high\n",
+    "function largest_palindrome_product(n)\n",
+    "    low = 10^(n-1)\n",
+    "    high = (10^n)-1\n",
+    "    range = low:high\n",
     "    palindrome_products = []\n",
-    "    for n in r\n",
-    "        for m in r\n",
-    "            if string(n*m) == string(n*m)[end:-1:begin]\n",
-    "                push!(palindrome_products, [n*m, n, m])\n",
+    "    for i in range\n",
+    "        for j in range\n",
+    "            if string(i*j) == string(i*j)[end:-1:begin] # string operation\n",
+    "                push!(palindrome_products, i*j)\n",
     "            end\n",
     "        end\n",
     "    end\n",
-    "    return maximum([x[1] for x in palindrome_products])\n",
+    "    return maximum(palindrome_products)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9d585b52",
+   "execution_count": 3,
+   "id": "fa8b4db6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "9009"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Test run\n",
-    "largest_palindrome_product(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "7d2ebc28",
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  103.212 ms (6484949 allocations: 290.58 MiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -81,8 +85,75 @@
     }
    ],
    "source": [
-    "# Answer\n",
-    "largest_palindrome_product(3)"
+    "@btime largest_palindrome_product(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbb2f265",
+   "metadata": {},
+   "source": [
+    "#### Solution 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "55e46c00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "largest_palindrome_product (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function largest_palindrome_product(n)\n",
+    "    low = 10^(n-1)\n",
+    "    high = (10^n)-1\n",
+    "    range = low:high\n",
+    "    palindrome_products = []\n",
+    "    for i in range\n",
+    "        for j in range\n",
+    "            if digits(i*j) == digits(i*j)[end:-1:begin] # no string operation\n",
+    "                push!(palindrome_products, i*j)\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "    return maximum(palindrome_products)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3dcb61f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  68.099 ms (2434949 allocations: 253.22 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "906609"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime largest_palindrome_product(3)"
    ]
   }
  ],
