--- a/python/problem_004.ipynb
+++ b/python/problem_004.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Largest palindrome product\n",
     "def largest_palindrome_product(digits):\n",
     "    low = 10**(digits-1)\n",
     "    high = (10**digits)-1\n",
@@ -25,8 +24,8 @@
     "    for n in r:\n",
     "        for m in r:\n",
     "            if str(n*m) == str(n*m)[::-1]:\n",
-    "                palindrome_products.append([n*m, n, m])\n",
-    "    return max([x[0] for x in palindrome_products])"
+    "                palindrome_products.append(n*m)\n",
+    "    return max(palindrome_products)"
    ]
   },
   {
@@ -34,27 +33,15 @@
    "execution_count": 2,
    "id": "9d585b52",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9009"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "largest_palindrome_product(digits=2)"
+    "assert largest_palindrome_product(digits=2) == 9009"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7d2ebc28",
+   "id": "23233c14",
    "metadata": {},
    "outputs": [
     {
@@ -69,14 +56,32 @@
     }
    ],
    "source": [
-    "# Answer\n",
+    "largest_palindrome_product(digits=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7d2ebc28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "118 ms ± 4.46 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
     "largest_palindrome_product(digits=3)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
