--- a/julia/problem_001.ipynb
+++ b/julia/problem_001.ipynb
@@ -16,11 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Packages\n",
-    "using BenchmarkTools\n",
-    "\n",
-    "# Settings\n",
-    "n = 999;"
+    "using BenchmarkTools"
    ]
   },
   {
@@ -41,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  80.750 μs (2421 allocations: 53.45 KiB)\n"
+      "  1.133 μs (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -57,7 +53,7 @@
    "source": [
     "@btime begin\n",
     "    s = 0\n",
-    "    for i in 1:n\n",
+    "    for i in 1:999\n",
     "        if (i%3 == 0) || (i%5 == 0)\n",
     "            s += i\n",
     "        end\n",
@@ -84,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  3.417 μs (10 allocations: 7.72 KiB)\n"
+      "  2.990 μs (6 allocations: 7.61 KiB)\n"
      ]
     },
     {
@@ -98,7 +94,7 @@
     }
    ],
    "source": [
-    "@btime sum([i for i in 1:n if (i%3 == 0) || (i%5 == 0)])"
+    "@btime sum([i for i in 1:999 if (i%3 == 0) || (i%5 == 0)])"
    ]
   },
   {
@@ -119,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  7.802 μs (21 allocations: 20.73 KiB)\n"
+      "  7.656 μs (18 allocations: 20.66 KiB)\n"
      ]
     },
     {
@@ -133,7 +129,7 @@
     }
    ],
    "source": [
-    "@btime sum(union(0:3:n, 0:5:n))"
+    "@btime sum(union(0:3:999, 0:5:999))"
    ]
   }
  ],
