--- a/julia/problem_002.ipynb
+++ b/julia/problem_002.ipynb
@@ -12,50 +12,52 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4f6b438b",
+   "id": "8bb33459",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Init\n",
-    "n = 4_000_000 # four million\n",
-    "fib = [1, 2]; # initial Fibonacci sequence"
+    "using BenchmarkTools"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "86eedacb-3def-49dd-8b09-07ad6f5af456",
+   "id": "7d2ebc28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fibonacci (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Build Fibonacci sequence\n",
-    "while sum(fib[end-1:end]) < n\n",
-    "    push!(fib, sum(fib[end-1:end]))\n",
+    "function fibonacci(n)\n",
+    "    fibonacci_sequence = [1, 2]\n",
+    "    while sum(fibonacci_sequence[end-1:end]) < n\n",
+    "        push!(fibonacci_sequence, sum(fibonacci_sequence[end-1:end]))\n",
+    "    end\n",
+    "    return fibonacci_sequence\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2d9ae0a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sum even numbers\n",
-    "s = 0\n",
-    "for i in fib\n",
-    "    if i%2 == 0\n",
-    "        s += i\n",
-    "    end\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7d2ebc28",
+   "id": "5144d475",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1.479 μs (68 allocations: 5.78 KiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -67,8 +69,7 @@
     }
    ],
    "source": [
-    "# Answer\n",
-    "s"
+    "@btime sum([f for f in fibonacci(4_000_000) if f%2 == 0])"
    ]
   }
  ],
