--- a/julia/problem_003.ipynb
+++ b/julia/problem_003.ipynb
@@ -16,8 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Packages\n",
-    "using Primes"
+    "using Primes, BenchmarkTools"
    ]
   },
   {
@@ -27,7 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Next prime\n",
     "function next_prime(p)::Int64\n",
     "    p += 1\n",
     "    while !isprime(p)\n",
@@ -42,17 +40,22 @@
    "execution_count": 3,
    "id": "bf328a0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "prime_factorization (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Prime factorization\n",
     "function prime_factorization(n)\n",
-    "\n",
-    "    # init\n",
     "    factors = Int64[]\n",
     "    index = 0\n",
     "    prime = 0\n",
-    "\n",
-    "    # logic\n",
     "    while n != 1\n",
     "        index += 1\n",
     "        prime = next_prime(prime)\n",
@@ -61,11 +64,8 @@
     "            n = Int64(n / prime)\n",
     "        end\n",
     "    end\n",
-    "\n",
-    "    # return\n",
-    "    return factors\n",
-    "    \n",
-    "end;"
+    "    return factors \n",
+    "end"
    ]
   },
   {
@@ -73,20 +73,9 @@
    "execution_count": 4,
    "id": "ea4b6847",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "29"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "maximum(prime_factorization(13195))"
+    "@assert maximum(prime_factorization(13195)) == 29"
    ]
   },
   {
@@ -95,6 +84,13 @@
    "id": "ff73ec22",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  20.500 μs (2 allocations: 144 bytes)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -106,8 +102,7 @@
     }
    ],
    "source": [
-    "# Answer\n",
-    "maximum(prime_factorization(600851475143))"
+    "@btime maximum(prime_factorization(600851475143))"
    ]
   }
  ],
