--- a/julia/problem_005.ipynb
+++ b/julia/problem_005.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Packages\n",
     "using BenchmarkTools"
    ]
   },
@@ -37,7 +36,6 @@
     }
    ],
    "source": [
-    "# Brute Force Solution\n",
     "function smallest_multiple(n::Int64)::Int64\n",
     "    x = 1\n",
     "    while !all([x%i == 0 for i in 1:n])\n",
@@ -50,9 +48,26 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "2c3ae458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@assert smallest_multiple(10) == 2520"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "550f00d4",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  164.495 s (931169730 allocations: 31.22 GiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -64,31 +79,7 @@
     }
    ],
    "source": [
-    "# Answer\n",
-    "smallest_multiple(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "65399e43",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
-       " Single result which took \u001b[34m173.998 s\u001b[39m (0.45% GC) to evaluate,\n",
-       " with a memory estimate of \u001b[33m31.22 GiB\u001b[39m, over \u001b[33m931169730\u001b[39m allocations."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Benchmark\n",
-    "@benchmark smallest_multiple(20) samples = 1 evals = 1"
+    "@btime smallest_multiple(20)"
    ]
   }
  ],
