--- a/julia/problem_006.ipynb
+++ b/julia/problem_006.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "6af6605c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [
@@ -26,7 +36,6 @@
     }
    ],
    "source": [
-    "# Sum Square Difference\n",
     "function sum_square_difference(n)\n",
     "    sum_of_square = sum([i^2 for i in 1:n])\n",
     "    square_of_sum = sum(1:n)^2\n",
@@ -36,31 +45,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9d585b52",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2640"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "sum_square_difference(10)"
+    "@assert sum_square_difference(10) == 2640"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7d2ebc28",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  69.303 ns (1 allocation: 896 bytes)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -72,8 +77,7 @@
     }
    ],
    "source": [
-    "# Answer\n",
-    "sum_square_difference(100)"
+    "@btime sum_square_difference(100)"
    ]
   }
  ],
