--- a/julia/problem_034.ipynb
+++ b/julia/problem_034.ipynb
@@ -12,9 +12,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "019b2641",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "6ca98e55",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  5.170 ms (199999 allocations: 18.28 MiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -26,8 +43,7 @@
     }
    ],
    "source": [
-    "# Answer\n",
-    "sum([x for x in 3:100_000 if x == sum([factorial(d) for d in digits(x)[end:-1:begin]])])"
+    "@btime sum([x for x in 3:100_000 if x == sum([factorial(d) for d in digits(x)])])"
    ]
   }
  ],
