--- a/julia/problem_048.ipynb
+++ b/julia/problem_048.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "83fc0a8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "29f97d68",
    "metadata": {},
    "outputs": [
@@ -26,7 +36,6 @@
     }
    ],
    "source": [
-    "# Sum self powers\n",
     "function sum_self_powers(n)::BigInt\n",
     "    s = big(0)\n",
     "    for i in 1:n\n",
@@ -38,31 +47,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bdcd0ec2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "sum_self_powers(10) == 10405071317"
+    "@assert sum_self_powers(10) == 10405071317"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e1c2cefc",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  879.959 μs (9009 allocations: 1.30 MiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -74,8 +79,7 @@
     }
    ],
    "source": [
-    "# Answer\n",
-    "string(sum_self_powers(1_000))[end-9:end]"
+    "@btime string(sum_self_powers(1_000))[end-9:end]"
    ]
   }
  ],
