--- a/julia/problem_052.ipynb
+++ b/julia/problem_052.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "f1fc974a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "972a518a",
    "metadata": {},
    "outputs": [
@@ -26,7 +36,6 @@
     }
    ],
    "source": [
-    "# Sort number\n",
     "function sort_num(num)\n",
     "    return join(sort([c for c in string(num)]))\n",
     "end"
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "401c6cef",
    "metadata": {},
    "outputs": [
@@ -49,7 +58,6 @@
     }
    ],
    "source": [
-    "# Permuted Multiples\n",
     "function permuted_multiples(x, y)\n",
     "    n = 1\n",
     "    while true\n",
@@ -68,10 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b48a83dc",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  66.556 ms (2285985 allocations: 130.80 MiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -83,8 +98,7 @@
     }
    ],
    "source": [
-    "# Answer\n",
-    "permuted_multiples(2, 6)"
+    "@btime permuted_multiples(2, 6)"
    ]
   }
  ],
