--- a/julia/problem_032.ipynb
+++ b/julia/problem_032.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "e61e86fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [
@@ -26,7 +36,6 @@
     }
    ],
    "source": [
-    "# Is pandigital?\n",
     "function ispandigital(num, n=0)\n",
     "    \"\"\"\n",
     "    ispandigital(123456789) == true\n",
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e564c137",
    "metadata": {},
    "outputs": [
@@ -56,7 +65,6 @@
     }
    ],
    "source": [
-    "# Concatenate a list of numbers\n",
     "function concat_nums(lst)\n",
     "    \"\"\"\n",
     "    concat_nums([1, 23, 456]) == 123456\n",
@@ -64,29 +72,35 @@
     "    concat_nums([0, 12, 345]) ==  12345\n",
     "    \"\"\"\n",
     "    ordered_digits = [n for l in [digits(num)[end:-1:begin] for num in lst] for n in l]\n",
-    "    concated_num = sum([i*j for (i, j) in zip(ordered_digits, [10^x for x in length(ordered_digits)-1:-1:0])])\n",
-    "    return concated_num\n",
+    "    concated_nums = sum([i*j for (i, j) in zip(ordered_digits, [10^x for x in length(ordered_digits)-1:-1:0])])\n",
+    "    return concated_nums\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e4b977f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Settings (try different values to optimize execution time)\n",
-    "multiplicand_max = 100\n",
-    "multiplier_max = 10_000;"
+    "multiplicand_max = 100 # try different values to optimize execution time\n",
+    "multiplier_max = 10_000; # try different values to optimize execution time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6ca98e55",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  644.138 ms (15982102 allocations: 1.74 GiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -98,8 +112,7 @@
     }
    ],
    "source": [
-    "# Answer\n",
-    "sum(Set(i*j for i in 1:multiplicand_max, j in 1:multiplier_max if ispandigital(concat_nums([i, j, i*j]), 9)))"
+    "@btime sum(Set(i*j for i in 1:multiplicand_max, j in 1:multiplier_max if ispandigital(concat_nums([i, j, i*j]), 9)))"
    ]
   }
  ],
